Add conditional formatting for numbers and strings

--- a/my-app/src/css/Excel.css
+++ b/my-app/src/css/Excel.css
@@ -3,6 +3,14 @@ table {
     width: 100%;
 }
 
+.text-right {
+  text-align: right;
+}
+
+.text-left {
+  text-align: left;
+}
+
 thead {
     background-color: #DDDDDD;
 }
